# gnuplot-tikz-pdf

./: README.md  cli.py  pyproject.toml
gnuplot_tikz_pdf/: __init__.py  cli.py  gnuplot.py
